[package]
name = "rchat"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "ChatGPT terminal client written in Rust."
homepage = "https://github.com/MartinOndejka/rchat"
repository = "https://github.com/MartinOndejka/rchat"
readme = "README.md"

[dependencies]
directories = "4.0.1"
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
serde = { version = "1.0.154", features = ["derive"] }
spinoff = "0.7.0"
